--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="head">
-            <div class="head">
-                <div class="logo"></div>
-                <div class="menu"></div>
+            <div class="head_container">
+                <div class="head_content">
+                    <div class="logo"></div>
+                    <div class="menu"></div>
+                </div>
             </div>
         </div>
         <div id="content"></div>
