--- a/html/head/head.html
+++ b/html/head/head.html
@@ -1,4 +1,6 @@
-<div class="head">
-    <div class="logo"></div>
-    <div class="menu"></div>
+<div class="head_container">
+    <div class="head_content">
+        <div class="logo"></div>
+        <div class="menu"></div>
+    </div>
 </div>
