--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="head">
-            <div class="head_container">
-                <div class="head_content">
-                    <div class="logo"></div>
-                    <div class="menu"></div>
-                </div>
-            </div>
+
         </div>
         <div id="content"></div>
         <div id="foot"></div>
         <script src="_assets/js/plugins.js"></script>
+        <script>
+            function pageInit() {
+                seajs.use(['script/index'],function (index) {
+                    index.init();
+                });
+            }
+        </script>
     </body>
 </html>
+
