--- a/html/head/head.html
+++ b/html/head/head.html
@@ -1,6 +1,15 @@
 <div class="head_container">
     <div class="head_content">
         <div class="logo"></div>
-        <div class="menu"></div>
+        <div class="menu">
+            <span class="index active">首页</span>
+            <span class="about">了解外星人</span>
+            <span class="new">最新作品</span>
+            <span class="product">外星人产品</span>
+            <span class="quality">质保查询</span>
+            <span class="link">联系方式</span>
+        </div>
+        <div class="clear"></div>
     </div>
 </div>
+
