--- a/html/content/index.html
+++ b/html/content/index.html
@@ -9,3 +9,18 @@
         <div class="clear"></div>
     </div>
 </div>
+
+<div class="about">
+    <div class="about_container">
+        <div class="about_layout">
+            <div class="about_layout_left"></div>
+            <div class="about_layout_right">
+                <div class="about_item_about_us"></div>
+                <div></div>
+            </div>
+            <div class="clear"></div>
+        </div>
+        <div class="about_title"></div>
+    </div>
+
+</div>
