--- a/html/content/index.html
+++ b/html/content/index.html
@@ -16,7 +16,12 @@
             <div class="about_layout_left"></div>
             <div class="about_layout_right">
                 <div class="about_item_about_us"></div>
-                <div></div>
+                <div class="about_item_about_tabs" id="about_item_about_tabs">
+
+                </div>
+                <div class="about_item_about_content" id="about_item_about_content">
+
+                </div>
             </div>
             <div class="clear"></div>
         </div>
