--- a/html/content/product.html
+++ b/html/content/product.html
@@ -17,7 +17,27 @@
             </div>
             <div class="clear"></div>
         </div>
-        <div class="product_img_list"></div>
+        <div class="product_img_list">
+            <div class="product_cate_list"><div class="product_cate_name">漆面膜</div></div>
+            <div class="product_img_container">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">Slide 1</div>
+                        <div class="swiper-slide">Slide 2</div>
+                        <div class="swiper-slide">Slide 3</div>
+                    </div>
+                    <!-- 如果需要分页器 -->
+                    <!--<div class="swiper-pagination"></div>-->
+
+                    <!-- 如果需要导航按钮 -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+
+                    <!-- 如果需要滚动条 -->
+                    <!--<div class="swiper-scrollbar"></div>-->
+                </div>
+            </div>
+        </div>
     </div>
     <div class="blank_5px"></div>
     <div class="product_item">
@@ -31,6 +51,7 @@
                     <div class="btn"><span>进入官网</span>&nbsp;&nbsp;<span class="icon-caret-right"></span></div>
                 </div>
             </div>
+            <div class="clear"></div>
         </div>
         <div class="product_img_list"></div>
     </div>
@@ -45,6 +66,7 @@
                     <div class="btn"><span>进入官网</span>&nbsp;&nbsp;<span class="icon-caret-right"></span></div>
                 </div>
             </div>
+            <div class="clear"></div>
         </div>
         <div class="product_img_list"></div>
     </div>
@@ -59,6 +81,7 @@
                     <div class="btn"><span>进入官网</span>&nbsp;&nbsp;<span class="icon-caret-right"></span></div>
                 </div>
             </div>
+            <div class="clear"></div>
         </div>
         <div class="product_img_list"></div>
     </div>
