--- a/html/content/product.html
+++ b/html/content/product.html
@@ -20,22 +20,48 @@
         <div class="product_img_list">
             <div class="product_cate_list"><div class="product_cate_name">漆面膜</div></div>
             <div class="product_img_container">
-                <div class="swiper-container">
+                <div class="icon-caret-left swiper_button_container swiper_button_xpel_left"></div>
+                <div class="swiper-container" id="swiper-XPEL">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">Slide 1</div>
-                        <div class="swiper-slide">Slide 2</div>
-                        <div class="swiper-slide">Slide 3</div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">碳纤维系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">碳纤维系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
                     </div>
-                    <!-- 如果需要分页器 -->
-                    <!--<div class="swiper-pagination"></div>-->
-
-                    <!-- 如果需要导航按钮 -->
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
-
-                    <!-- 如果需要滚动条 -->
-                    <!--<div class="swiper-scrollbar"></div>-->
                 </div>
+                <div class="icon-caret-right swiper_button_container swiper_button_xpel_right"></div>
             </div>
         </div>
     </div>
@@ -53,7 +79,53 @@
             </div>
             <div class="clear"></div>
         </div>
-        <div class="product_img_list"></div>
+        <div class="product_img_list">
+            <div class="product_cate_list"><div class="product_cate_name">漆面膜</div></div>
+            <div class="product_img_container">
+                <div class="icon-caret-left swiper_button_container swiper_button_3m_left"></div>
+                <div class="swiper-container" id="swiper-3M">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">碳纤维系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">碳纤维系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="icon-caret-right swiper_button_container swiper_button_3m_right"></div>
+            </div>
+        </div>
     </div>
     <div class="blank_5px"></div>
     <div class="product_item">
@@ -68,7 +140,53 @@
             </div>
             <div class="clear"></div>
         </div>
-        <div class="product_img_list"></div>
+        <div class="product_img_list">
+            <div class="product_cate_list"><div class="product_cate_name">漆面膜</div></div>
+            <div class="product_img_container">
+                <div class="icon-caret-left swiper_button_container swiper_button_pwf_left"></div>
+                <div class="swiper-container" id="swiper-PWF">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">碳纤维系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">碳纤维系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="icon-caret-right swiper_button_container swiper_button_pwf_right"></div>
+            </div>
+        </div>
     </div>
     <div class="blank_5px"></div>
     <div class="product_item">
@@ -83,7 +201,53 @@
             </div>
             <div class="clear"></div>
         </div>
-        <div class="product_img_list"></div>
+        <div class="product_img_list">
+            <div class="product_cate_list"><div class="product_cate_name">漆面膜</div></div>
+            <div class="product_img_container">
+                <div class="icon-caret-left swiper_button_container swiper_button_etpd_left"></div>
+                <div class="swiper-container" id="swiper-ETPD">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">碳纤维系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">碳纤维系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_img"></div>
+                            <div class="swiper_text">哑光金属系列</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="icon-caret-right swiper_button_container swiper_button_etpd_right"></div>
+            </div>
+        </div>
     </div>
     <div class="blank_5px"></div>
 </div>
