--- a/html/foot/foot.html
+++ b/html/foot/foot.html
@@ -17,4 +17,4 @@
     </div>
 </div>
 <div class="clear"></div>
-<div class="copyright">Copyright © 2016  Waixingren Company Limited All Rights Reserved. </div>
+<div class="copyright">Copyright © 2016  Waixingren Company Limited All Rights Reserved. 浙ICP备16020215号</div>
