--- a/admin/index.html
+++ b/admin/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../_assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../_assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="../_assets/css/animate.css">
-    <link rel="stylesheet" href="../_assets/css/main.css">
+    <link rel="stylesheet" href="../_assets/css/admin.css">
     <script src="../_assets/js/modernizr-2.8.3.min.js"></script>
 
 </head>
