--- a/admin/index.html
+++ b/admin/index.html
@@ -32,7 +32,7 @@
 <script>
     function pageInit() {
         var spinkit = SpinKit.Create({
-            color: '#444'
+            color: '#fff'
         });
         seajs.use(['../script/admin/index'], function (index) {
             $(function () {
