--- a/html/admin/product/cate.html
+++ b/html/admin/product/cate.html
@@ -1,23 +1,23 @@
-<div class="title">基础信息>团队成员</div>
+<div class="title">产品管理>分类管理</div>
 <div class="search_container">
     <div class="item">
         <div class="item left">
-            <div class="item_left">姓名:</div>
+            <div class="item_left">品牌名称:</div>
             <div class="item_right">
                 <input class="item_input" style="min-width: 80px;" type="text" name="name" id="name">
             </div>
             <div class="clear"></div>
         </div>
-        <div class="item left">
-            <div class="item_left"> 手机号码:</div>
-            <div class="item_right">
-                <input class="item_input" style="min-width: 80px;" type="text" name="mobile" id="mobile">
-            </div>
-            <div class="clear"></div>
-        </div>
+        <!--<div class="item left">-->
+            <!--<div class="item_left"> 分类名:</div>-->
+            <!--<div class="item_right">-->
+                <!--<input class="item_input" style="min-width: 80px;" type="text" name="mobile" id="mobile">-->
+            <!--</div>-->
+            <!--<div class="clear"></div>-->
+        <!--</div>-->
         <div class="item right">
             <span class="search_sumbit_btn"><span class="icon-zoom-in"></span>搜索</span>
-            <span class="add_sumbit_btn">添加成员</span>
+            <span class="add_sumbit_btn">添加</span>
         </div>
         <div class="clear"></div>
     </div>
@@ -28,8 +28,8 @@
         <table id="table_id" class="row-border hover order-column" cellspacing="0">
             <thead>
             <tr>
-                <th>照片</th>
-                <th>用户信息</th>
+                <th>品牌</th>
+                <th>分类信息</th>
                 <th>详细信息</th>
                 <th>操作</th>
             </tr>
