--- a/html/content/product.html
+++ b/html/content/product.html
@@ -5,249 +5,36 @@
     </div>
 </div>
 <div class="product_content">
-    <div class="product_item ">
-        <div class="product_cate">
-            <div class="product_logo small_XPEL"></div>
-            <div class="product_text">
-                <div class="product_text_cateName">美国XPEL专用漆面透明保护膜</div>
-                <div class="product_text_content">XPEL是全球唯一专业做专车专用车漆透明保护膜的上市公司，8.5MIL的厚度给客户提供更全面的漆面保护（世界最厚），划痕可自动还原，抗腐蚀性极度优秀，专车专用，原厂数据，电脑切割，免拆汽车部件，零风险装贴，提高施工速度70%。为爱车提供强大的十年质保，不起边/不变色/不断裂/不掉胶。</div>
-                <div class="product_text_btn">
-                    <div class="btn"><span>进入官网</span>&nbsp;&nbsp;<span class="icon-caret-right"></span></div>
-                </div>
-            </div>
-            <div class="clear"></div>
-        </div>
-        <div class="product_img_list">
-            <div class="product_cate_list"><div class="product_cate_name">漆面膜</div></div>
-            <div class="product_img_container">
-                <div class="icon-caret-left swiper_button_container swiper_button_xpel_left"></div>
-                <div class="swiper-container" id="swiper-XPEL">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">碳纤维系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">碳纤维系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
+
+</div>
+
+<div class="product_content_templete" style="display: none;">
+    <div class="product_id">
+        <div class="product_item ">
+            <div class="product_cate">
+                <div class="product_logo small_Logo"></div>
+                <div class="product_text">
+                    <div class="product_text_cateName"></div>
+                    <div class="product_text_content"></div>
+                    <div class="product_text_btn">
+                        <div class="btn"><span>进入官网</span>&nbsp;&nbsp;<span class="icon-caret-right"></span></div>
                     </div>
                 </div>
-                <div class="icon-caret-right swiper_button_container swiper_button_xpel_right"></div>
+                <div class="clear"></div>
             </div>
-        </div>
-    </div>
-    <div class="blank_5px"></div>
-    <div class="product_item">
-        <div class="product_cate">
-            <div class="product_logo small_3M"></div>
-            <div class="product_text">
-                <div class="product_text_cateName">美国3M1080车身改色保护膜</div>
-                <div class="product_text_content">3M1080是世界最顶级汽车改色膜，它的全球销量大于其它欧美品牌的总和，在国外著名的Youtube视频网站上随处可见，它基于3M全球领先的双层铸造级贴膜及第三代导气槽和背胶技术专利，品质卓越、材质精细、色泽精美、质感优异、耐久性佳,是全球、特别是欧美及日本高端轿车、跑车改色必然之首选。</div>
-                <div class="product_text_content">3M1080系列改色膜可直接进行车身包覆，不需要覆保护膜，保证色泽明亮度双色层生产工艺保证贴膜的稳定性和使用品质保证3.5mil厚的铸造级贴膜能保护车辆在高速行驶下因路面碎石而对车漆造成的伤害，更简易的施工,可整张膜包覆所有弧度，并保证贴膜效果的一致性和抗拉伸性能，95%额外拉伸，不回缩，不翘边</div>
-                <div class="product_text_btn">
-                    <div class="btn"><span>进入官网</span>&nbsp;&nbsp;<span class="icon-caret-right"></span></div>
-                </div>
-            </div>
-            <div class="clear"></div>
-        </div>
-        <div class="product_img_list">
-            <div class="product_cate_list"><div class="product_cate_name">漆面膜</div></div>
-            <div class="product_img_container">
-                <div class="icon-caret-left swiper_button_container swiper_button_3m_left"></div>
-                <div class="swiper-container" id="swiper-3M">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">碳纤维系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">碳纤维系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
+            <div class="product_img_list">
+                <!--<div class="product_cate_list"><div class="product_cate_name">漆面膜</div></div>-->
+                <div class="product_img_container">
+                    <div class="icon-caret-left swiper_button_container"></div>
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+
                         </div>
                     </div>
+                    <div class="icon-caret-right swiper_button_container"></div>
                 </div>
-                <div class="icon-caret-right swiper_button_container swiper_button_3m_right"></div>
             </div>
         </div>
+        <div class="blank_5px"></div>
     </div>
-    <div class="blank_5px"></div>
-    <div class="product_item">
-        <div class="product_cate">
-            <div class="product_logo small_PWF"></div>
-            <div class="product_text">
-                <div class="product_text_cateName">德国PWF车身改色保护膜</div>
-                <div class="product_text_content">美国XPEL汽车漆面透明保护贴膜，通过运用一层8mil厚、几乎看不见的聚氨酯薄膜来保护您的爱车免受因岩石、砂砾、盐或昆虫造成的损害。XPEL漆面保护膜不会发黄，具有很好的环境耐性和超级保光性与卓越的通透性。</div>
-                <div class="product_text_btn">
-                    <div class="btn"><span>进入官网</span>&nbsp;&nbsp;<span class="icon-caret-right"></span></div>
-                </div>
-            </div>
-            <div class="clear"></div>
-        </div>
-        <div class="product_img_list">
-            <div class="product_cate_list"><div class="product_cate_name">漆面膜</div></div>
-            <div class="product_img_container">
-                <div class="icon-caret-left swiper_button_container swiper_button_pwf_left"></div>
-                <div class="swiper-container" id="swiper-PWF">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">碳纤维系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">碳纤维系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="icon-caret-right swiper_button_container swiper_button_pwf_right"></div>
-            </div>
-        </div>
-    </div>
-    <div class="blank_5px"></div>
-    <div class="product_item">
-        <div class="product_cate">
-            <div class="product_logo small_ETPD"></div>
-            <div class="product_text">
-                <div class="product_text_cateName">ET轮毂保护圈</div>
-                <div class="product_text_content">美国XPEL汽车漆面透明保护贴膜，通过运用一层8mil厚、几乎看不见的聚氨酯薄膜来保护您的爱车免受因岩石、砂砾、盐或昆虫造成的损害。XPEL漆面保护膜不会发黄，具有很好的环境耐性和超级保光性与卓越的通透性。</div>
-                <div class="product_text_btn">
-                    <div class="btn"><span>进入官网</span>&nbsp;&nbsp;<span class="icon-caret-right"></span></div>
-                </div>
-            </div>
-            <div class="clear"></div>
-        </div>
-        <div class="product_img_list">
-            <div class="product_cate_list"><div class="product_cate_name">漆面膜</div></div>
-            <div class="product_img_container">
-                <div class="icon-caret-left swiper_button_container swiper_button_etpd_left"></div>
-                <div class="swiper-container" id="swiper-ETPD">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">碳纤维系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">碳纤维系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="swiper_img"></div>
-                            <div class="swiper_text">哑光金属系列</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="icon-caret-right swiper_button_container swiper_button_etpd_right"></div>
-            </div>
-        </div>
-    </div>
-    <div class="blank_5px"></div>
 </div>
