--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <div id="head"></div>
 <div id="content"></div>
 <div id="product"></div>
+<div id="news"></div>
 <div id="foot"></div>
 <script src="_assets/js/plugins.js"></script>
 <script>
